1.3.12 2013-07-19
-----------------
- Fixed issue where timeouts sometimes would behave wrongly (Issue #1032)
- Fixed bug with callback third parameter on some commands (Issue #1033)
- Fixed possible issue where killcursor command might leave hanging functions
- Fixed issue where Mongos was not correctly removing dead servers from the pool of eligable servers
- Updated bson parser to 0.2.1 with security fix and non-promotion of Long values to javascript Numbers (once a long always a long) 

1.3.11 2013-07-04
-----------------
- Fixed errors on geoNear and geoSearch (Issue #1024, https://github.com/ebensing)
- Add driver version to export (Issue #1021, https://github.com/aheckmann)
- Add text to readpreference obedient commands (Issue #1019)
- Drivers should check the query failure bit even on getmore response (Issue #1018)
- Map reduce has incorrect expectations of 'inline' value for 'out' option (Issue #1016, https://github.com/rcotter)
- Support SASL PLAIN authentication (Issue #1009)
- Ability to use different Service Name on the driver for Kerberos Authentication (Issue #1008)
- Remove unnecessary octal literal to allow the code to run in strict mode (Issue #1005, https://github.com/jamesallardice)
- Proper handling of recovering nodes (when they go into recovery and when they return from recovery, Issue #1027)

1.3.10 2013-06-17
-----------------
- Guard against possible undefined in server::canCheckoutWriter (Issue #992, https://github.com/willyaranda)
- Fixed some duplicate test names (Issue #993, https://github.com/kawanet)
- Introduced write and read concerns for GridFS (Issue #996)
- Fixed commands not correctly respecting Collection level read preference (Issue #995, #999)
- Fixed issue with pool size on replicaset connections (Issue #1000)
- Execute all query commands on master switch (Issue #1002, https://github.com/fogaztuc)

1.3.9 2013-06-05
----------------