@@ -116,6 +116,11 @@ struct {
 }
 */
 QueryCommand.prototype.toBinary = function() {
+  // Validate that we are not passing 0x00 in the colletion name
+  if(!!~this.collectionName.indexOf("\x00")) {
+    throw new Error("namespace cannot contain a null character");
+  }
+
   // Total length of the command
   var totalLengthOfCommand = 0;
   // Calculate total length of the document
