@@ -4,6 +4,7 @@
 - Fixed bug with callback third parameter on some commands (Issue #1033)
 - Fixed possible issue where killcursor command might leave hanging functions
 - Fixed issue where Mongos was not correctly removing dead servers from the pool of eligable servers
+- Throw error if dbName or collection name contains null character (at command level and at collection level)
 - Updated bson parser to 0.2.1 with security fix and non-promotion of Long values to javascript Numbers (once a long always a long) 
 
 1.3.11 2013-07-04
